South Relays Page update

--- a/south_relays.htm
+++ b/south_relays.htm
@@ -63,14 +63,12 @@
 					<tr>
 						<td valign="top" width="100%">
 							<!-- MSCellType="ContentBody" -->
-							<!-- #BeginEditable "content" -->
 							<p>&nbsp;</p>
-							<p class="style1h">Shawnee Mission South Relays<br>2017</p>
-							<p class="style15">Saturday, April 1st</p>
-							<p class="style15"><em>Note: Due to construction all events will be held at SM North District Stadium</em></p>
+							<p class="style1h">Shawnee Mission South Relays<br>2018</p>
+							<p class="style15">Saturday, March 31st</p>
 							<div style="margin:auto; display:none" id="defaultCountdown"></div>
 							<p style="display:block" class="style15">
-								<a target="_blank" href="https://drive.google.com/open?id=0B4e6HoJZumBwSkVBdjN3VW4yc2hyM3ByaWtlSDhuelB4azNF">Results</a> </p>
+								<a target="_blank" href="https://drive.google.com/open?id=0B4e6HoJZumBwSkVBdjN3VW4yc2hyM3ByaWtlSDhuelB4azNF">2017 Results</a> </p>
 							<p class="style15">
 								<a href="records/smsrelaysboys.htm">Meet Records</a></p>
 
