Calendar Link Icon Updates

--- a/schedule.htm
+++ b/schedule.htm
@@ -72,11 +72,11 @@
 
 							<p id="sched" class="schedlink" align="center"></p>
 
-							<p align="center">Open in Google Calendar
-								<a href="https://www.google.com/calendar/embed?src=smsraidertrack%40gmail.com&ctz=America/Chicago" target="_blank"><img src="https://www.google.com/calendar/images/html.gif" style="border:none;" alt="Google Calendar"></a>
+							<p class="schedlink" align="center">Open in Google Calendar
+								<a href="https://www.google.com/calendar/embed?src=smsraidertrack%40gmail.com&ctz=America/Chicago" target="_blank"><i class="material-icons">open_in_new</i></a>
 							</p>
-							<p align="center">Open in Outlook
-								<a href="https://www.google.com/calendar/ical/smsraidertrack%40gmail.com/public/basic.ics" target="_blank"><img src="https://www.google.com/calendar/images/ical.gif" style="border:none;" alt="iCal"></a>
+							<p class="schedlink" align="center">Outlook Import
+								<a href="https://www.google.com/calendar/ical/smsraidertrack%40gmail.com/public/basic.ics" target="_blank"><i class="material-icons">file_download</i></a>
 							</p>
 							<p>&nbsp;</p>
 
