Team Store update

--- a/index.htm
+++ b/index.htm
@@ -216,11 +216,11 @@
 												</td>
 											</tr>
 											<tr style="display:block">
-												<td class="style24" style="background: #2d2a25;">
+												<td class="style24" style="background: #0c6e45;">
 													<div style="text-align:center; font-family:sans-serif;font-weight:bold">
 														<span class="style28">
-                                 <a target="_blank" href="http://eflyerorder.com/SOUTHTRACKFIELD17"><img title="Team Store" width="178px" border="0" src="images/teamstore.jpg" alt="Team Store"></a>
-                                 <a target="_blank" href="https://store.thegraphicedge.com/eFlyer/main.asp?stid=shawneetf">Team Store</a>
+                                 <a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true"><img title="Team Store" width="178px" border="0" src="https://assetly.ordermygear.com/images/w_180,h_100,c_limit/5a71513f1d9d9268258b467c.png" alt="Team Store"></a>
+                                 <a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true">Team Store</a>
                                 </span>
 													</div>
 												</td>
