--- a/south_relays.htm
+++ b/south_relays.htm
@@ -68,6 +68,8 @@
 							<p class="style15">Saturday, March 31st</p>
 							<div style="margin:auto; display:none" id="defaultCountdown"></div>
 							<p style="display:block" class="style15">
+								<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwVzh3Z0tOQnNOemcxSk9Qb2syakotaXlWQWdj/view?usp=sharing">Schedule</a> </p>
+							<p style="display:block" class="style15">
 								<a target="_blank" href="https://drive.google.com/open?id=0B4e6HoJZumBwSkVBdjN3VW4yc2hyM3ByaWtlSDhuelB4azNF">2017 Results</a> </p>
 							<p class="style15">
 								<a href="records/smsrelaysboys.htm">Meet Records</a></p>
