--- a/throws/formchart.htm
+++ b/throws/formchart.htm
@@ -43,6 +43,26 @@ start()">
 								</tr>
 								<tr>
 									<td>
+										<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSeWXUJYsoLNo0hYTA0x8MYbVDVGKZPb1VDsSlmwG1vw5mwhc2-QuMV8Z-bd0Xs9O_bH0ae_BjmUM5e/pubhtml?widget=true&amp;headers=false"></iframe>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<p>&nbsp;</p>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<p>***</p>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<p>&nbsp;</p>
+									</td>
+								</tr>
+								<tr>
+									<td>
 										<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/1VZXghLeVreIW3OuEn0H7-aFkKPJoF4kVz8vdvYmW1ok/pubhtml?widget=true&amp;headers=false"></iframe>
 									</td>
 								</tr>
