Hide Team Store

--- a/index.htm
+++ b/index.htm
@@ -215,7 +215,7 @@
 													</div>
 												</td>
 											</tr>
-											<tr style="display:block">
+											<tr style="display:none">
 												<td class="style24" style="background: #0c6e45;">
 													<div style="text-align:center; font-family:sans-serif;font-weight:bold">
 														<span class="style28">
