--- a/forms.htm
+++ b/forms.htm
@@ -51,7 +51,7 @@
 
 
 								<h2 align="center">Forms</h2>
-								<p align="center"><span class="style1">2017</span></p>
+								<p align="center"><span class="style1">2017/18</span></p>
 								<div style="display: none">
 									<p align="center">
 										<a target="_blank" href="https://docs.google.com/drawings/d/18R0vFLim1X3SZnU7D390QTIVm6eiuoNpJmSsRZ4glAw/edit?usp=sharing">
@@ -69,8 +69,8 @@
 								<p align="center">
 									<span class="style1m">Booster Club Scholarship</span><br>
 
-									<a target="_blank" href="https://docs.google.com/document/d/1U7aMGDVylAHFQv66YQ3dmaLvzGnCFRrhv4ESEuqGM9M/edit?usp=sharing">
-			Information</a>
+									<a target="_blank" href="https://drive.google.com/open?id=1A05TS_Kq7i3THGfF-jjWSxUoKW4ka16D">
+			Information (2018)</a>
 									<br>
 									<a target="_blank" href="https://docs.google.com/document/d/1HwxNUoTLLDlZnSKUK7-1SRUhBudneRWOo-67YBHb_W0/edit?usp=sharing">
 			Application</a>
