CSS refactor plus 2019 changes

--- a/coaches.htm
+++ b/coaches.htm
@@ -1,7 +1,4 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-
-<!-- #BeginTemplate "smstrack.dwt" -->
-
 <head>
 	<meta http-equiv="Content-Language" content="en-us">
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
@@ -9,29 +6,14 @@
 	<meta name="ProgId" content="FrontPage.Editor.Document">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<!-- #BeginEditable "doctitle" -->
 	<title>Coaches</title>
-	<style type="text/css">
-		.style24 {
-			color: #FF0000;
-		}
-	</style>
-	<!-- #EndEditable -->
 	<link rel="stylesheet" type="text/css" href="sms.css">
-	<style type="text/css">
-		.style23 {
-			text-align: center;
-		}
-	</style>
 	<script src="js/common.js"></script>
 </head>
 
 <body>
-
 	<div style="margin:0 auto;max-width:1250px">
 		<div style="width:100%">
-
-
 			<script language="javascript">
 				displayHeader();
 			</script>
@@ -40,14 +22,8 @@
 					<!-- MSTableType="layout" -->
 					<tr>
 						<td valign="top" width="100%">
-							<!-- MSCellType="ContentBody" -->
-							<!-- #BeginEditable "content" -->
-
-
 							<p>&nbsp;</p>
-
-							<h3 align="center" class="style1h">2018 Coaches</h3>
-
+							<h3 align="center" class="style1h">2019 Coaches</h3>
 							<div align="center">
 								<table height="605" border="0" id="table3">
 									<tbody>
@@ -92,10 +68,10 @@
 											<td>&nbsp;</td>
 										</tr>
 										<tr>
-											<td><b class="style1">Demetrious Baylis</b> - (Horizontal Jumps)</td>
+											<td><b class="style1">Jake Calwell</b></td>
 										</tr>
 										<tr>
-											<td><a class="slink" href="mailto:dbaylis1229@gmail.com">dbaylis1229@gmail.com</a></td>
+											<td><a class="slink" href="mailto:jakecaldwell@smsd.org">jakecaldwell@smsd.org</a></td>
 										</tr>
 										<tr>
 											<td>&nbsp;</td>
@@ -157,22 +133,7 @@
 										</tr>
 									</tbody>
 								</table>
-
-
-
-								<p style="margin-bottom: 0;">
-									<font size="2">
-
-										<!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->16 Nov 2017
-										<!--webbot bot="Timestamp" i-checksum="14754" endspan -->
-									</font>
-
 							</div>
-
-
-
-
-							<!-- #EndEditable -->
 						</td>
 						<td height="273"></td>
 					</tr>
@@ -202,7 +163,4 @@ src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/"
 alt="web stats"></a></div></noscript>
 	<!-- End of StatCounter Code for Default Guide -->
 </body>
-
-<!-- #EndTemplate -->
-
 </html>
