--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,5 @@
 <html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+
 <head>
 	<script type="application/ld+json">
 {
@@ -52,22 +53,22 @@
 	<meta name="ProgId" content="FrontPage.Editor.Document">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-		
+
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
 	<link href="sms.css" rel="stylesheet">
 	<link href="css/jquery.countdown.css" rel="stylesheet">
-	<link href="css/index.css" rel="stylesheet">
 
 	<link href="http://smstrack.org/feed.xml" rel="alternate" title="RSS" type="application/rss+xml">
-	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script src="https://apis.google.com/js/client.js?onload=loadGoogleData"></script>
 
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script src="js/jquery.countdown.min.js"></script>
 	<script src="http://www.google.com/jsapi"></script>
+	
 	<script src="js/schedfp.js"></script>
-	<script src="js/common.js"></script>
 	<script src="js/frontpage.js"></script>
+	<script src="js/common.js"></script>
+	<script src="https://apis.google.com/js/client.js?onload=loadGoogleData"></script>
 
 	<title>Shawnee Mission South Track and Field</title>
 </head>
@@ -81,21 +82,17 @@
 			</script>
 			<div id="contenttable">
 				<table border="0" cellpadding="0" cellspacing="0" width="100%">
-					<!-- MSTableType="layout" -->
 					<tr>
 						<td valign="top" width="100%">
-							<!-- MSCellType="ContentBody" -->
-							<!-- #BeginEditable "content" -->
 							<table border="0" cellpadding="0" cellspacing="0" width="100%">
 								<tr>
 									<td valign="top" width="150" style="height: 55px">
-										<!-- MSCellType="ContentBody" -->
 										<table id="table5" border="0" cellpadding="0" cellspacing="0" width="180" class="style30">
 											<tr style="cursor:pointer; height: 315px" onmouseover="" onclick="document.location.href='south_relays.htm'">
 												<td>
 													<div class="style36">
 														<span class="style34"><strong>South Relays</strong></span>
-														<span class="style35"><strong><br>Saturday<br>March 31st<br>2018</strong></span>
+														<span class="style35"><strong><br>Saturday<br>March 30th<br>2019</strong></span>
 													</div>
 												</td>
 											</tr>
@@ -103,16 +100,18 @@
 												<td class="style24" style="background: #0c6e45;">
 													<div style="text-align:center; font-family:sans-serif;font-weight:bold">
 														<span class="style28">
-                                 <a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true"><img title="Team Store" width="178px" border="0" src="https://assetly.ordermygear.com/images/w_180,h_100,c_limit/5a71513f1d9d9268258b467c.png" alt="Team Store"></a>
-                                 <a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true">Team Store</a>
-                                </span>
+															<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true"><img title="Team Store"
+																 width="178px" border="0" src="https://assetly.ordermygear.com/images/w_180,h_100,c_limit/5a71513f1d9d9268258b467c.png"
+																 alt="Team Store"></a>
+															<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true">Team Store</a>
+														</span>
 													</div>
 												</td>
 											</tr>
 											<tr style="display:none">
 												<td class="style27">
 													<p><span class="style28">
-                                <a target="_blank" href="sponsors/index.htm">Visit Our Sponsors</a></span></p>
+															<a target="_blank" href="sponsors/index.htm">Visit Our Sponsors</a></span></p>
 												</td>
 											</tr>
 										</table>
@@ -131,12 +130,6 @@
 										<table cellpadding="0" cellspacing="0" width="182" class="style23">
 											<tr>
 												<td cellpadding="0" cellspacing="0" valign="top" class="style24 scrollLine">
-													<div id="wx_module_1246">
-														<a class="twitter-timeline" data-width="180" href="https://twitter.com/search?q=from%3ASMSWannamaker%20%23SMSTF" data-widget-id="828261321720344578"></a>
-														<script src=js/twitter.js></script>
-													</div>
-												</td>
-											</tr>
 											<tr>
 												<td cellpadding="0" cellspacing="0" valign="top" class="style24 scrollLine">
 													<script src="js/vscroll.js">
@@ -145,12 +138,6 @@
 											</tr>
 											<tr>
 												<td cellpadding="0" cellspacing="0" valign="top">
-													<div id="wx_module_1246">
-														<!--a href="http://www.weather.com/weather/local/66207"-->
-
-													</div>
-													<script type="text/javascript" src="js/weather.js">
-													</script>
 												</td>
 											</tr>
 										</table>
@@ -163,9 +150,6 @@
 
 							<script src="https://www.googleapis.com/blogger/v3/blogs/484182122543119585/posts?callback=handleResponse&key=AIzaSyDPyjKbAMmWr1pexjS4iUPoq4W2EJUsFyE">
 							</script>
-
-
-							<!-- #EndEditable -->
 						</td>
 						<td height="273"></td>
 					</tr>
@@ -190,11 +174,10 @@
 		var sc_security = "c1dd7cc1";
 	</script>
 	<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
-	<noscript><div class="statcounter"><a title="web stats"
-href="http://statcounter.com/free-web-stats/"
-target="_blank"><img class="statcounter"
-src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/"
-alt="web stats"></a></div></noscript>
+	<noscript>
+		<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
+				 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
+	</noscript>
 	<!-- End of StatCounter Code for Default Guide -->
 </body>
 
