--- a/south_relays.htm
+++ b/south_relays.htm
@@ -21,21 +21,6 @@
 	</style>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.countdown.min.js"></script>
-	<script type="text/javascript">
-		/*globals displayHeader displayFooter*/
-		/*eslint-env jquery */
-		$(function()
-		{
-			var endDate = new Date();
-			endDate = new Date(endDate.getFullYear(), 2, 30, 9, 0, 0, 0);
-			$('#defaultCountdown').countdown(
-			{
-				until: endDate
-			});
-			$('#year').text(endDate.getFullYear());
-		});
-	</script>
-
 	<title>South Relays</title>
 	<!-- #EndEditable -->
 	<link rel="stylesheet" type="text/css" href="sms.css">
@@ -62,10 +47,10 @@
 						<td valign="top" width="100%">
 							<!-- MSCellType="ContentBody" -->
 							<p>&nbsp;</p>
-							<p class="style1h">Shawnee Mission South Relays<br>2018</p>
-							<p class="style15">Saturday, March 31st</p>
+							<p class="style1h">Shawnee Mission South Relays<br>2019</p>
+							<p class="style15">Saturday, March 30th</p>
 							<div style="margin:auto; display:none" id="defaultCountdown"></div>
-							<p style="display:block" class="style15">
+							<p style="display:none" class="style15">
 								<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwc3VYUFBFTk5IM1Z1Q2IyRHNrWEtSZlJMRk5z/view?usp=sharing">Results</a> </p>
 							<p class="style15">
 								<a href="records/smsrelaysboys.htm">Meet Records</a></p>
