--- a/honors.htm
+++ b/honors.htm
@@ -47,7 +47,7 @@
 							<p>&nbsp;</p>
 
 							<h1 align="center"><font size="5" class="style1h">
-			2017 Post-Season Honors<br>
+			2018 Post-Season Honors<br>
 </font></h1>
 							<table bordercolor="#2e4d47" width="244" align="center" class="style56" style="display:none">
 								<tr>
@@ -79,43 +79,18 @@
 
 								<tr>
 									<td width="230" align="center">
-										Desirae Upton - <em>Shot</em><br>
+										Sam Macklin - <em>Long Jump</em><br>
 									</td>
 								</tr>
 								<tr>
 									<td>&nbsp;</td>
 								</tr>
 								<tr>
-									<td width="230" align="center" class="style1m"><b>2nd Team</b></td>
-								</tr>
-
-								<tr>
-									<td width="230" align="center">
-										Quincie Fischer - <em>Discus</em><br>Rakeya Martin - <em>Discus</em><br>
-									</td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td width="230" align="center" class="style1m"><b>Honorable 	Mention</b></td>
+									<td width="230" align="center" class="style1m"><b>Honorable Mention</b></td>
 								</tr>
 								<tr>
 									<td width="230" align="center">
-										Mitch Brock - <em>800</em><br>
-										Andrew Crawford - <em>High Jump</em><br>
-										Danielle Reichart - <em>300 Hurdles</em><br>
-										Desirae Upton - <em>Discus</em><br>
-										<br>
-										Subreedia Lewis - <em>4x100</em><br>
-										Danielle Reichart - <em>4x100</em><br>
-										Jadyn Smith - <em>4x100</em><br>
-										Desirae Upton - <em>4x100</em><br>
-										<br>
-										Huseyin Bilgen - <em>4x100</em><br>
-										Trenton Holliman - <em>4x100</em><br>
-										Maicel Smith - <em>4x100</em><br>
-										Cameron Union - <em>4x100</em><br>
+										Jacob Wheat - <em>3200</em><br>
 									</td>
 								</tr>
 
