--- a/coaches.htm
+++ b/coaches.htm
@@ -68,7 +68,7 @@
 											<td>&nbsp;</td>
 										</tr>
 										<tr>
-											<td><b class="style1">Jake Calwell</b></td>
+											<td><b class="style1">Jake Caldwell</b></td>
 										</tr>
 										<tr>
 											<td><a class="slink" href="mailto:jakecaldwell@smsd.org">jakecaldwell@smsd.org</a></td>
