--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
 	<script src="/js/schedfp.js"></script>
 	<script src="/js/frontpage.js"></script>
 	<script src="https://apis.google.com/js/client.js?onload=loadGoogleData"></script>
-	
+
 	<meta http-equiv="Content-Language" content="en-us">
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
@@ -119,12 +119,9 @@
 								</td>
 								<td valign="top" width="125" style="height: 55px">
 									<table cellpadding="0" cellspacing="0" width="182" class="style23">
-										<tr>
-											<td cellpadding="0" cellspacing="0" valign="top" class="style24 scrollLine">
-										<tr>
-											<td cellpadding="0" cellspacing="0" valign="top" class="style24 scrollLine">
-												<script src="js/vscroll.js">
-												</script>
+										</tr>
+											<td cellpadding="0" cellspacing="0" valign="top" class="indexscroll scrollLine">
+												<script src="js/vscroll.js"></script>
 											</td>
 										</tr>
 										<tr>
@@ -156,7 +153,7 @@
 	<script>
 		$(".header").load("/header.html");
 		$(".footer").load("/footer.html");
-	</script>	
+	</script>
 	<!-- Start of StatCounter Code for Default Guide -->
 	<script type="text/javascript">
 		var sc_project = 3895026;
