--- a/south_relays.htm
+++ b/south_relays.htm
@@ -13,7 +13,7 @@
 
 <body>
 	<div class="header"></div>
-	<div class="content">
+	<div class="maindiv">
 		<table border="0" cellpadding="0" cellspacing="0" width="100%">
 			<tr>
 				<td valign="top" width="100%">
