--- a/guidelines.htm
+++ b/guidelines.htm
@@ -494,7 +494,7 @@ normal">OR</b>
 			</table>
 		</div>
 		<div class="footer"></div>
-		<script src="/js/jquery-latest.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script>
 			$(".header").load("/header.html");
 			$(".teamheader").load("/teamheader.html");
