--- a/throws/videos.htm
+++ b/throws/videos.htm
@@ -38,7 +38,7 @@
 		</table>
 	</div>
 	<div class="footer"></div>
-	<script src="/js/jquery-latest.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
 		$(".throwsheader").load("/throws/throwsheader.html");
 		$(".footer").load("/footer.html");
