--- a/header.html
+++ b/header.html
@@ -1,39 +1,35 @@
-<div class="maindiv">
-    <div class="bodydiv">
-        <div id='banner' class='style1'>
-            <table cellspacing='0' cellpadding='0' class='style2' style='width: 100%'>
-                <tr>
-                    <td align='left' valign='top' style='width: 410px'>
+<div
+  class="hero style3"
+  onclick="location.href=&quot;/index.htm&quot;"
+  style="cursor:pointer; z-index: 1"
+>
+  <div style="text-align: left">
+    <a
+      target="_blank"
+      href="https://twitter.com/search?q=from%3ASMSWannamaker+%23SMSTF&ref_src=twsrc%5Etfw"
+    >
+      <img
+        alt="Twitter Feed"
+        src="/images/Twitter_logo_blue_32.png"
+        width="32"
+        height="32"
+        class="style22"
+        halign="middle"
+      />
+    </a>
 
-                        <a target='_blank' href='https://twitter.com/search?q=from%3ASMSWannamaker+%23SMSTF&ref_src=twsrc%5Etfw'>
-                            <img alt='Twitter Feed' src='/images/Twitter_logo_blue_32.png' width='32' height='32' class='style22'
-                                align='middle'></a>
-                        <a target='_blank' href='http://www.youtube.com/user/smsraidertrack'>
-                            <img src='/images/youtube-icon-full_color_32.png' alt='Youtube channel' class='style22'
-                                align='middle'></a>
-                        <br>
-                        <a href='/index.htm'><img src='/images/clear.gif' alt='' style=' border:0;'></a>
-                    </td>
-                    <td class='style3' onclick='location.href=&quot;/index.htm&quot;' style='cursor:pointer;'>
-                        <img border='0' src='/images/run.png' alt=''></td>
-                </tr>
-
-            </table>
-        </div>
-        <div id='menubar' class='menubar'>
-            <table class='menubar' border='0' cellpadding='0' style='border-collapse: collapse' width='100%' id='table1'>
-                <tr class='menubar'>
-                    <td><a href='/index.htm'>Home</a></td>
-                    <td><a href='/news.htm'>News</a></td>
-                    <td><a href='/schedule.htm'>Schedule/Results</a></td>
-                    <td><a href='/team.htm'>Team</a></td>
-                    <td><a href='/coaches.htm'>Coaches</a></td>
-                    <td><a href='/archives/state_champion_teams.htm'>Records/Lists</a></td>
-                    <td><a href='/honors.htm'>Honors</a></td>
-                    <td><a href='/pictures.htm'>Pictures</a></td>
-                    <td><a href='/links.htm'>Links</a></td>
-                </tr>
-            </table>
-        </div>
+    <a target="_blank" href="http://www.youtube.com/user/smsraidertrack">
+      <img
+        src="/images/youtube-icon-full_color_32.png"
+        alt="Youtube channel"
+        class="style22"
+        halign="middle"
+      />
+    </a>
+    <div class="titletext">
+      <p>Shawnee Mission South<br />Track & Field</p>
     </div>
+  </div>
+  <!-- sets div height -->
+  <img src="/images/clear.gif" style="visibility: hidden;" />
 </div>
