--- a/index.htm
+++ b/index.htm
@@ -64,15 +64,15 @@
 <body>
 	<div class="maindiv grid-container">
 		<div class="header"></div>
-		<div  class="menu1 menubar"><a href="/index.htm">Home</a></div>
-		<div  class="menu2 menubar"><a href="/news.htm">News</a></div>
-		<div  class="menu3 menubar"><a href="/schedule.htm">Schedule</a></div>
-		<div  class="menu4 menubar"><a href="/team.htm">Team</a></div>
-		<div  class="menu5 menubar"><a href="/coaches.htm">Coaches</a></div>
-		<div  class="menu6 menubar"><a href="/archives/state_champion_teams.htm">Records</a></div>
-		<div  class="menu7 menubar"><a href="/honors.htm">Honors</a></div>
-		<div  class="menu8 menubar"><a href="/pictures.htm">Pictures</a></div>
-		<div  class="menu9 menubar"><a href="/links.htm">Links</a></div>
+		<div class="menu1 menubar"><a href="/index.htm">Home</a></div>
+		<div class="menu2 menubar"><a href="/news.htm">News</a></div>
+		<div class="menu3 menubar"><a href="/schedule.htm">Schedule</a></div>
+		<div class="menu4 menubar"><a href="/team.htm">Team</a></div>
+		<div class="menu5 menubar"><a href="/coaches.htm">Coaches</a></div>
+		<div class="menu6 menubar"><a href="/archives/state_champion_teams.htm">Records</a></div>
+		<div class="menu7 menubar"><a href="/honors.htm">Honors</a></div>
+		<div class="menu8 menubar"><a href="/pictures.htm">Pictures</a></div>
+		<div class="menu9 menubar"><a href="/links.htm">Links</a></div>
 		<div class="left relaysbanner" onmouseover="" onclick="document.location.href='south_relays.htm'">
 			<div class="style36">
 				<span class="style34"><strong>South Relays</strong></span>
@@ -83,7 +83,7 @@
 			<div id="newsDisplay" style="display: none;"></div>
 			<div id="countdownDisplay" style="display: none;" class="style37">
 				<div id="countdownDisplayTitle"></div><br>
-				<!-- <div id="defaultCountdown"></div> -->
+				<div id="defaultCountdown"></div>
 			</div>
 			<div id="scheduleDisplay" style="display: none;"></div>
 		</div>
@@ -93,7 +93,7 @@
 			</div>
 			<div class="style24 style28" style="display:none; background: #0c6e45; text-align:center; font-family:sans-serif;font-weight:bold">
 				<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true"><img title="Team Store" width="178px"
-					 border="0" src="https://assetly.ordermygear.com/images/w_180,h_100,c_limit/5a71513f1d9d9268258b467c.png" alt="Team Store"></a>
+					 src="https://assetly.ordermygear.com/images/w_180,h_100,c_limit/5a71513f1d9d9268258b467c.png" alt="Team Store"></a>
 				<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true">Team Store</a>
 			</div>
 			<div class="style27" style="display:none;">
