--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <div
   class="hero style3"
-  onclick="location.href=&quot;/index.htm&quot;"
+  onclick="location.href='/index.htm'"
   style="cursor:pointer; z-index: 1"
 >
   <div style="text-align: left">
