--- a/footer.html
+++ b/footer.html
@@ -1,44 +1,27 @@
-<table style="width: 100%">
-    <tr class='style23'>
-        <td>
-            <p><em>Home of the Shawnee Mission South Raiders Track & Field Team</em></p>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <p>&nbsp;</p>
-        </td>
-    </tr>
-    <tr align='center' style='display:block;'>
-        <td width='180px'>
-            <form action='https://www.paypal.com/cgi-bin/webscr' method='post' target='_blank'>
-                <input type='hidden' name='cmd' value='_s-xclick'>
-                <input type='hidden' name='hosted_button_id' value='BZJGCCBHK6VV8'>
-                <input border='0' type='image' width='180px' src='https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif'
-                    border='0' name='submit' alt='PayPal - The safer, easier way to pay online!'>
-                <img alt='' border='0' src='https://www.paypalobjects.com/en_US/i/scr/pixel.gif' width='1' height='1'>
-            </form>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <p>&nbsp;</p>
-        </td>
-    </tr>
-    <tr align='center'>
-        <td valign='bottom'>
-            <a href='https://smsouth.smsd.org'>
-                <img border='0' src='/images/sms_tr2.jpg' width='83' height='101'></a>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <p align='center'>
-                <font face='Arial' size='2'>
-                    <a href='https://smsouth.smsd.org'>Shawnee Mission South High School</a><br>
-                </font>
-                <font face='Arial' size='-1'>5800 West 107th Street<br> Overland Park, KS 66207</font>
-            </p>
-        </td>
-    </tr>
-</table>
+<p><em>Home of the Shawnee Mission South Raiders Track & Field Team</em></p>
+<form action="https://www.paypal.com/cgi-bin/webscr"
+  method="post"
+  target="_blank">
+  <input type="hidden" name="cmd" value="_s-xclick" />
+  <input type="hidden" name="hosted_button_id" value="BZJGCCBHK6VV8" />
+  <input type="image"
+    src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"
+    name="submit"
+    alt="PayPal - The safer, easier way to pay online!"/>
+    <img alt="Donate"
+    src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
+    width="1"
+    height="1"/>
+</form>
+<div class="schoollogo">
+    <a href="https://smsouth.smsd.org">
+        <img src="/images/sms_tr2.jpg">
+    </a>
+</div>
+<div class="schooladdress">
+    <a href="https://smsouth.smsd.org">
+        Shawnee Mission South High School<br>
+        5800 West 107th Street<br>
+        Overland Park, KS 66207
+    </a>
+</div>
