--- a/mainmenu.html
+++ b/mainmenu.html
@@ -1,9 +1,10 @@
-<div  class="menu1 menubar"><a href="/index.htm">Home</a></div>
-<div  class="menu2 menubar"><a href="/news.htm">News</a></div>
-<div  class="menu3 menubar"><a href="/schedule.htm">Schedule</a></div>
-<div  class="menu4 menubar"><a href="/team.htm">Team</a></div>
-<div  class="menu5 menubar"><a href="/coaches.htm">Coaches</a></div>
-<div  class="menu6 menubar"><a href="/archives/state_champion_teams.htm">Records</a></div>
-<div  class="menu7 menubar"><a href="/honors.htm">Honors</a></div>
-<div  class="menu8 menubar"><a href="/pictures.htm">Pictures</a></div>
-<div  class="menu9 menubar"><a href="/links.htm">Links</a></div>
+<a href="/index.htm">Home</a>
+<a href="/schedule.htm">Schedule</a>
+<a href="/archives/state_champion_teams.htm">Records</a>
+<a href="/coaches.htm">Coaches</a>
+<a href="/news.htm">News</a>
+<a href="/team.htm">Team</a>
+<a href="/honors.htm">Honors</a>
+<a href="/pictures.htm">Pictures</a>
+<a href="/links.htm">Links</a>
+<i class="menuicon material-icons">menu</i>
