--- a/schedule.htm
+++ b/schedule.htm
@@ -6,6 +6,7 @@
 	<meta name="description" content="Shawnee Mission South Track &amp; Field Schedule and Results" />
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field" />
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<link rel="stylesheet" type="text/css" href="/css/sms.css" />
@@ -18,16 +19,15 @@
 		<div class="header"></div>
 		<div class="menubar"></div>
 		<div class="left"></div>
-		<div class="middle scheduletable">
+		<div class="middle" >
 			<h3 id="title" class="style1h"></h3>
-			<div id="sched" class="schedlink" align="center"></div>
-			<div class="schedlink" align="center">
+			<div id="sched"></div>
+			<div class="schedlink">
 				Open in Google Calendar
 				<a href="https://www.google.com/calendar/embed?src=smsraidertrack%40gmail.com&ctz=America/Chicago" target="_blank">
 					<i class="material-icons">open_in_new</i>
 				</a>
-			</div>
-			<div class="schedlink" align="center">
+				<br>
 				Outlook Import
 				<a href="https://www.google.com/calendar/ical/smsraidertrack%40gmail.com/public/basic.ics" target="_blank"><i class="material-icons">file_download</i></a>
 			</div>
