--- a/schedule.htm
+++ b/schedule.htm
@@ -25,11 +25,13 @@
 			<div class="schedlink">
 				Open in Google Calendar
 				<a href="https://www.google.com/calendar/embed?src=smsraidertrack%40gmail.com&ctz=America/Chicago" target="_blank">
-					<i class="material-icons">open_in_new</i>
+					<i class="material-icons schedicons">open_in_new</i>
 				</a>
 				<br>
 				Outlook Import
-				<a href="https://www.google.com/calendar/ical/smsraidertrack%40gmail.com/public/basic.ics" target="_blank"><i class="material-icons">file_download</i></a>
+				<a href="https://www.google.com/calendar/ical/smsraidertrack%40gmail.com/public/basic.ics" target="_blank">
+				  <i class="material-icons schedicons">file_download</i>
+				</a>
 			</div>
 		</div>
 		<div class="right"></div>
