--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,7 @@
 <body>
 	<div class="maindiv grid-container">
 		<div class="header"></div>
-		<div class="menubar"></div>
+		<div class="mainmenu menubar"></div>
 		<div class="left relaysbanner" onmouseover="" onclick="document.location.href='south_relays.htm'">
 			<div class="relaysbannertext">
 				<span class="style34"><strong>South Relays</strong></span>
@@ -103,7 +103,7 @@
 	<script src="https://www.googleapis.com/blogger/v3/blogs/484182122543119585/posts?callback=handleResponse&key=AIzaSyDPyjKbAMmWr1pexjS4iUPoq4W2EJUsFyE"></script>
 	<script>
 		$(".header").load("/header.html");
-		$(".menubar").load("/mainmenu.html");
+		$(".mainmenu").load("/mainmenu.html");
 		$(".footer").load("/footer.html");
 	</script>
 	<!-- Start of StatCounter Code for Default Guide -->
