--- a/schedule.htm
+++ b/schedule.htm
@@ -17,10 +17,10 @@
 <body>
 	<div class="maindiv grid-container">
 		<div class="header"></div>
-		<div class="menubar"></div>
+		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle" >
-			<h3 id="title" class="style1h"></h3>
+			<h3 id="title" class="stylmee1h"></h3>
 			<div id="sched"></div>
 			<div class="schedlink">
 				Open in Google Calendar
@@ -44,7 +44,7 @@
 	<script src="/js/sched.js"></script>
 	<script>
 		$(".header").load("/header.html");
-		$(".menubar").load("/mainmenu.html");
+		$(".mainmenu").load("/mainmenu.html");
 		$(".footer").load("/footer.html");
 		$(document).ready(function () {
 			$("#title").html(
